--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -68,7 +68,7 @@ $aside-width: 35%;
 .aside {
   align-self: stretch;
   margin: 0 auto;
-  background-color: black;
+  background-color: #2c313c;
   color: white;
 
   // Positioning on the side for
