--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -9,6 +9,10 @@ $aside-width: 35%;
 .main {
   margin: 0 auto;
 
+  .row {
+    flex-direction: row-reverse;
+  }
+
   h3 {
     font-size: 3.4rem;
     line-height: 1.6;
