--- a/src/components/Sidebar/About/style.scss
+++ b/src/components/Sidebar/About/style.scss
@@ -97,7 +97,7 @@ $margin-bottom: 40px;
 
       .emoji {
         font-size: 1.8rem;
-        padding-top: 10px;
+        padding-right: 14px;
       }
     }
   }
